package com.attendance.leave.entity;

public enum LeaveStatus {
    PENDING,
    APPROVED,
    REJECTED
}
