package com.attendance.leave.entity;

public enum LeaveType {
    SICK_LEAVE,
    CASUAL_LEAVE,
    ANNUAL_LEAVE,
    EMERGENCY_LEAVE,
    UNPAID_LEAVE
}
