---
title: Class Diagram - Leave Service
---
classDiagram
    %% Entity
    class LeaveRequest {
        -Long id
        -Long employeeId
        -LeaveType type
        -LocalDate startDate
        -LocalDate endDate
        -String reason
        -LeaveStatus status
        -LocalDateTime createdAt
        -validateDates() void
        +onCreate() void
        +onUpdate() void
    }
    
    class LeaveType {
        <<enumeration>>
        SICK_LEAVE
        CASUAL_LEAVE
        ANNUAL_LEAVE
        EMERGENCY_LEAVE
        UNPAID_LEAVE
    }
    
    class LeaveStatus {
        <<enumeration>>
        PENDING
        APPROVED
        REJECTED
    }
    
    %% DTOs
    class CreateLeaveRequest {
        -Long employeeId
        -LeaveType type
        -LocalDate startDate
        -LocalDate endDate
        -String reason
    }
    
    class UpdateLeaveStatusRequest {
        -LeaveStatus status
    }
    
    class LeaveRequestResponse {
        -Long id
        -Long employeeId
        -LeaveType type
        -LocalDate startDate
        -LocalDate endDate
        -String reason
        -LeaveStatus status
        -LocalDateTime createdAt
    }
    
    %% Repository
    class LeaveRequestRepository {
        <<interface>>
        +findById(Long id) Optional~LeaveRequest~
        +findByEmployeeId(Long employeeId) List~LeaveRequest~
        +findByStatus(LeaveStatus status) List~LeaveRequest~
        +findAll() List~LeaveRequest~
        +save(LeaveRequest leaveRequest) LeaveRequest
    }
    
    %% Service
    class LeaveService {
        -LeaveRequestRepository leaveRequestRepository
        -LeaveMapper leaveMapper
        +createLeaveRequest(CreateLeaveRequest request) LeaveRequestResponse
        +updateStatus(Long id, UpdateLeaveStatusRequest request) LeaveRequestResponse
        +getEmployeeLeaves(Long employeeId) List~LeaveRequestResponse~
        +getAllLeaves() List~LeaveRequestResponse~
        +getLeavesByStatus(LeaveStatus status) List~LeaveRequestResponse~
    }
    
    %% Controller
    class LeaveController {
        -LeaveService leaveService
        +createLeaveRequest(CreateLeaveRequest request) ResponseEntity~LeaveRequestResponse~
        +updateStatus(Long id, UpdateLeaveStatusRequest request) ResponseEntity~LeaveRequestResponse~
        +getEmployeeLeaves(Long employeeId) ResponseEntity~List~
        +getAllLeaves() ResponseEntity~List~
        +getLeavesByStatus(LeaveStatus status) ResponseEntity~List~
    }
    
    %% Mapper
    class LeaveMapper {
        <<interface>>
        +toEntity(CreateLeaveRequest request) LeaveRequest
        +toResponse(LeaveRequest leaveRequest) LeaveRequestResponse
        +toResponseList(List~LeaveRequest~ leaves) List~LeaveRequestResponse~
    }
    
    %% Security
    class AdminOnly {
        <<annotation>>
    }
    
    class SecurityAspect {
        +checkAdminAccess(JoinPoint joinPoint) void
    }
    
    %% Relationships
    LeaveRequest --> LeaveType : has
    LeaveRequest --> LeaveStatus : has
    LeaveService --> LeaveRequestRepository : uses
    LeaveService --> LeaveMapper : uses
    LeaveController --> LeaveService : uses
    LeaveController --> CreateLeaveRequest : receives
    LeaveController --> UpdateLeaveStatusRequest : receives
    LeaveController --> LeaveRequestResponse : returns
    LeaveController --> AdminOnly : annotated with
    LeaveRequestRepository --> LeaveRequest : manages
    LeaveMapper --> LeaveRequest : maps to/from
    LeaveMapper --> CreateLeaveRequest : maps from
    LeaveMapper --> LeaveRequestResponse : maps to
